--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "8.52.0",
     "eslint-config-next": "14.0.1",
     "express": "^4.18.2",
+    "font-awesome": "^4.7.0",
     "next": "^14.0.3",
     "next-auth": "^4.24.4",
     "passport-google-oauth": "^2.0.0",
@@ -31,6 +32,8 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.12.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-table": "^7.8.0",
     "tailwindcss": "3.3.5",
     "uuid": "^9.0.1"
