--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
     "@clerk/clerk-js": "^4.65.1",
     "@clerk/clerk-react": "^4.28.0",
     "@clerk/nextjs": "^4.27.1",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@types/express": "^4.17.20",
     "@types/node": "^20.8.10",
     "@workos-inc/node": "^3.7.1",
     "autoprefixer": "10.4.16",
     "axios": "^1.6.0",
     "body-parser": "^1.20.2",
+    "clsx": "^2.0.0",
     "dotenv": "^16.3.1",
     "eslint": "8.52.0",
     "eslint-config-next": "14.0.1",
     "express": "^4.18.2",
     "font-awesome": "^4.7.0",
+    "lucide-react": "^0.300.0",
     "next": "^14.0.3",
     "next-auth": "^4.24.4",
     "passport-google-oauth": "^2.0.0",
@@ -36,6 +40,7 @@
     "react-icons": "^4.12.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-table": "^7.8.0",
+    "tailwind-merge": "^2.2.0",
     "tailwindcss": "3.3.5",
     "uuid": "^9.0.1"
   },
