--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.6.0",
     "body-parser": "^1.20.2",
     "clsx": "^2.0.0",
+    "date-fns": "^3.0.6",
     "dotenv": "^16.3.1",
     "eslint": "8.52.0",
     "eslint-config-next": "14.0.1",
@@ -46,6 +47,8 @@
   },
   "devDependencies": {
     "@types/react": "18.2.34",
+    "@types/react-datepicker": "^4.19.4",
+    "@types/react-table": "^7.7.18",
     "typescript": "^5.2.2"
   }
 }
