--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
     "@clerk/clerk-js": "^4.65.1",
     "@clerk/clerk-react": "^4.28.0",
     "@clerk/nextjs": "^4.27.1",
+    "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@types/express": "^4.17.20",
     "@types/node": "^20.8.10",
     "@workos-inc/node": "^3.7.1",
     "autoprefixer": "10.4.16",
     "axios": "^1.6.0",
     "body-parser": "^1.20.2",
-    "clsx": "^2.0.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "date-fns": "^3.0.6",
     "dotenv": "^16.3.1",
     "eslint": "8.52.0",
@@ -36,14 +41,16 @@
     "react": "18.2.0",
     "react-datepicker": "^4.25.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.48.2",
+    "react-hook-form": "^7.50.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-table": "^7.8.0",
-    "tailwind-merge": "^2.2.0",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.3.5",
-    "uuid": "^9.0.1"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^9.0.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/react": "18.2.34",
