--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "autoprefixer": "10.4.16",
     "axios": "^1.6.0",
     "body-parser": "^1.20.2",
+    "chart.js": "^4.4.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.0.6",
