--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "express": "^4.18.2",
     "font-awesome": "^4.7.0",
     "lucide-react": "^0.300.0",
+    "moment": "^2.30.1",
     "next": "^14.0.3",
     "next-auth": "^4.24.4",
     "passport-google-oauth": "^2.0.0",
     "path": "^0.12.7",
     "postcss": "8.4.31",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.25.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.50.0",
