--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-table": "^8.15.0",
     "@types/express": "^4.17.20",
     "@types/node": "^20.8.10",
     "@workos-inc/node": "^3.7.1",
