--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-responsive": "^10.0.0",
     "react-table": "^7.8.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.3.5",
