--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-responsive": "^10.0.0",
     "react-table": "^7.8.0",
+    "sharp": "^0.33.4",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.3.5",
     "tailwindcss-animate": "^1.0.7",
